# NEO6

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
src/: lib.rs  main.rs  neo.rs
