[package]
name = "stm_tracker"
version = "0.1.0"
authors = ["jmatyas <jakubk.m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.13"
cortex-m = "0.7.1"
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3.7"
embedded-hal = "0.2.4"
nb = "1.0.0"
panic-semihosting = "0.5.6"

[dependencies.stm32f1xx-hal]
path = "../stm32f1xx-hal"
version = "0.7.0"
features = ["rt", "stm32f103", "medium"]
